# rate-our-music

server/: .gitignore  Cargo.toml  Makefile.toml
server/migrations/: 20210305030741_init.sql  20210305030741_user.sql  20210319161253_logging.sql  20210405160748_initialize.sql  20210410004010_extensions.sql  20210410004014_roles.sql  20210410004133_account.sql  20210410004200_release.sql  20210410004218_track.sql  20210410004237_artist.sql  20210410004256_genre.sql  20210410004547_review.sql  20210410004604_test-init.sql  20210429170258_init-genres.sql
server/src/: auth.rs  errors.rs  main.rs  session.rs
server/src/environment/: jwt.rs  mod.rs
server/src/graphql/: context.rs  guards.rs  mod.rs
server/src/graphql/mutation/: account.rs  artist.rs  logging.rs  mod.rs  release.rs  release_genre.rs  release_review.rs  releases.rs  track_review.rs
server/src/graphql/query/: account.rs  artist.rs  genre.rs  mod.rs  release.rs  release_review.rs  release_type.rs  track.rs  (+1 more)
server/src/model/: account.rs  artist.rs  descriptor.rs  descriptor_vote.rs  genre.rs  genre_vote.rs  log.rs  mod.rs  release.rs  release_artist.rs  release_genre.rs  release_genre_vote.rs  release_review.rs  release_tag.rs  release_type.rs  role.rs  tag.rs  track.rs  track_genre.rs  track_genre_vote.rs  track_review.rs
server/src/sql/: account.rs  artist.rs  descriptor.rs  descriptor_vote.rs  genre.rs  genre_vote.rs  log.rs  mod.rs  release.rs  release_artist.rs  release_genre_vote.rs  release_review.rs  release_type.rs  role.rs  tag.rs  track.rs  track_genre_vote.rs  track_review.rs
(+245 files in other folders)
