[package]
name = "rate-our-music"
version = "0.1.0"
authors = ["Jake Cheek <jake@f-m.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "bigdecimal",
] }
num-traits = "0.2"
redis = { version = "0.20", features = ["tokio-comp"] }
warp = { version = "0.3", features = ["tls"] }
dotenv_codegen = "0.15"
async-graphql = "2.6"
async-graphql-warp = "2.6"
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
shrinkwraprs = "0.3"
chrono = "0.4"
